# test_project

./: .env  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
migrations/: env.py
src/: config.py  containers.py  decorators.py  exceptions.py  main.py  middleware.py  validators.py
src/auth/: authentificate.py
src/db/: base.py  models.py  session.py
src/db/data_acess_layer/: abc.py  account.py  goods.py  transactions.py  user.py
src/db/migrations/: env.py
src/endpoints/: admin.py  auth_endpoints.py  goods_endpoints.py  transaction_endpoints.py  user_endpoints.py
src/endpoints/goods_endpoints/: admin_good_endpoints.py  goods_endpoints.py
src/endpoints/user_endpoints/: admin_user_endpoints.py  user_endpoints.py
src/services/: auth_services.py  goods_services.py  transaction_services.py  user_services.py
src/shemas/: goods_shemas.py  transactions_shemas.py  user_shemas.py
src/utilities/: auth.py  autodiscovery.py  create_app.py  middleware.py
tests/: conftest.py  test_auth.py  test_goods.py  test_transactions.py  test_users.py
